# strutext

./: CMakeLists.txt
Catch2/src/: CMakeLists.txt
Catch2/src/catch2/: catch_approx.cpp  catch_approx.hpp  catch_message.cpp  catch_section_info.hpp  catch_session.cpp  catch_template_test_macros.hpp  catch_test_case_info.cpp  catch_test_case_info.hpp  catch_timer.cpp
Catch2/src/catch2/benchmark/: catch_benchmark.hpp
Catch2/src/catch2/benchmark/detail/: catch_complete_invoke.hpp
Catch2/src/catch2/generators/: catch_generators_adapters.hpp  catch_generators_range.hpp
Catch2/src/catch2/interfaces/: catch_interfaces_generatortracker.hpp  catch_interfaces_reporter.hpp
Catch2/src/catch2/internal/: catch_assertion_handler.cpp  catch_clara.hpp  catch_commandline.cpp  catch_compiler_capabilities.hpp  catch_console_colour.cpp  catch_container_nonmembers.hpp  catch_debug_console.cpp  catch_debugger.cpp  catch_decomposer.hpp  catch_errno_guard.hpp  catch_exception_translator_registry.cpp  catch_fatal_condition_handler.cpp  catch_list.cpp  catch_main.cpp  catch_meta.hpp  catch_noncopyable.hpp  catch_output_redirect.cpp  catch_output_redirect.hpp  catch_preprocessor.hpp  catch_random_number_generator.hpp  catch_run_context.cpp  catch_stream.cpp  catch_stream.hpp  catch_stringref.hpp  catch_template_test_registry.hpp  catch_test_registry.hpp  catch_test_spec_parser.cpp  catch_textflow.hpp  catch_unique_ptr.hpp  catch_xmlwriter.cpp  catch_xmlwriter.hpp
Catch2/src/catch2/matchers/: catch_matchers.hpp  catch_matchers_contains.hpp  catch_matchers_floating_point.cpp  catch_matchers_floating_point.hpp  catch_matchers_templated.hpp
Catch2/src/catch2/matchers/internal/: catch_matchers_combined_tu.cpp
Catch2/src/catch2/reporters/: catch_reporter_automake.cpp  catch_reporter_compact.cpp  catch_reporter_console.cpp  catch_reporter_console.hpp  catch_reporter_junit.cpp  catch_reporter_tap.cpp  catch_reporter_xml.cpp
automata/: CMakeLists.txt  ac_iterator.h  aho_corasick.h  automata.cpp  serializer.h
automata/test/: CMakeLists.txt  ac_test.cpp  trie_test.cpp
data/: generete_dict.cmd
encode/: CMakeLists.txt  char_iterator.h  char_unicode32_decoder.cpp  utf8_iterator.h
encode/test/: CMakeLists.txt  char_iterator_test.cpp  utf8_iterator_test.cpp
examples/: CMakeLists.txt  morpher.cpp  symbol_iterator.cpp
morpho/alphabets/: eng_alphabet.h  rus_alphabet.h
morpho/aot/: CMakeLists.txt  eng_aot_parser.h  main.cpp  rus_aot_parser.h
morpho/models/: eng_model.h  eng_model_description.h  rus_model.h  rus_model_description.h
morpho/models/test/: CMakeLists.txt  rus_model_test.cpp
morpho/morpholib/: CMakeLists.txt  base_storage.cpp  morpho.cpp  suffix_storage.cpp
morpho/morpholib/test/: CMakeLists.txt  test.cpp
symbols/: CMakeLists.txt  st_generator.py
symbols/test/: CMakeLists.txt  test.cpp
ut-data/: ut_main.cpp
utility/: filter_iterator.h  ngram_iterator.h  symbol_iterator.h  word_iterator.h
utility/test/: CMakeLists.txt  test.cpp
